{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 68,
  "lineage": "92a498cf-760b-68f6-2bbe-01a079438ac8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e601abe3e1a910f",
            "arn": "arn:aws:ec2:eu-central-1:452220760922:instance/i-0dc99fdccd7d61f2d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc99fdccd7d61f2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c1403c919d8f1af8"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1403c919d8f1af8",
            "private_dns": "ip-10-0-1-19.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.19",
            "public_ip": "3.127.134.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0085db2bd3163aef4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03210ae0439c763b8",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adbc90a3e052b028"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_az1",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e601abe3e1a910f",
            "arn": "arn:aws:ec2:eu-central-1:452220760922:instance/i-00a6ed0b1b68bd14f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a6ed0b1b68bd14f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ae1c75896c924d45"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ae1c75896c924d45",
            "private_dns": "ip-10-0-2-43.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.43",
            "public_ip": "18.195.101.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035071656cc990681",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064b56b5f2594621f",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adbc90a3e052b028"
            ]
          },
          "dependencies": [
            "aws_network_interface.nic_az2",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:internet-gateway/igw-0df2ddd4bd793b119",
            "id": "igw-0df2ddd4bd793b119",
            "owner_id": "452220760922",
            "vpc_id": "vpc-026b991fefa0eb421"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:loadbalancer/app/my-alb/ee9350ab1ebdf1aa",
            "arn_suffix": "app/my-alb/ee9350ab1ebdf1aa",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1485994139.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:loadbalancer/app/my-alb/ee9350ab1ebdf1aa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0adbc90a3e052b028"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03210ae0439c763b8"
              },
              {
                "subnet_id": "subnet-064b56b5f2594621f"
              }
            ],
            "subnets": [
              "subnet-03210ae0439c763b8",
              "subnet-064b56b5f2594621f"
            ],
            "vpc_id": "vpc-026b991fefa0eb421",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:listener/app/my-alb/ee9350ab1ebdf1aa/984a224a5bdb890d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/46da6a02f59839a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:listener/app/my-alb/ee9350ab1ebdf1aa/984a224a5bdb890d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:loadbalancer/app/my-alb/ee9350ab1ebdf1aa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/46da6a02f59839a3",
            "arn_suffix": "targetgroup/my-target-group/46da6a02f59839a3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/46da6a02f59839a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-026b991fefa0eb421"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/46da6a02f59839a3-20240117132320854400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/46da6a02f59839a3",
            "target_id": "i-0dc99fdccd7d61f2d"
          },
          "dependencies": [
            "aws_instance.instance_az1",
            "aws_lb_target_group.my_target_group",
            "aws_network_interface.nic_az1",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "my_target_group_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/46da6a02f59839a3-20240117132320791900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:452220760922:targetgroup/my-target-group/46da6a02f59839a3",
            "target_id": "i-00a6ed0b1b68bd14f"
          },
          "dependencies": [
            "aws_instance.instance_az2",
            "aws_lb_target_group.my_target_group",
            "aws_network_interface.nic_az2",
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:network-interface/eni-0c1403c919d8f1af8",
            "id": "eni-0c1403c919d8f1af8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:3d:5f:c4:97:a1",
            "owner_id": "452220760922",
            "private_ip": "10.0.1.19",
            "private_ip_list": [
              "10.0.1.19"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.19"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0adbc90a3e052b028"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03210ae0439c763b8",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            }
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nic_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:network-interface/eni-0ae1c75896c924d45",
            "id": "eni-0ae1c75896c924d45",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:e5:2d:6a:67:db",
            "owner_id": "452220760922",
            "private_ip": "10.0.2.43",
            "private_ip_list": [
              "10.0.2.43"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.43"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0adbc90a3e052b028"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064b56b5f2594621f",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            }
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0df2ddd4bd793b119",
            "id": "r-rtb-08d757e113351b3441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d757e113351b344",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_subnet_rt",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:route-table/rtb-08d757e113351b344",
            "id": "rtb-08d757e113351b344",
            "owner_id": "452220760922",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-026b991fefa0eb421"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013815fb7ca387ff1",
            "route_table_id": "rtb-08d757e113351b344",
            "subnet_id": "subnet-03210ae0439c763b8"
          },
          "dependencies": [
            "aws_route_table.public_subnet_rt",
            "aws_subnet.subnet_az1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d15b721b46647ad8",
            "route_table_id": "rtb-08d757e113351b344",
            "subnet_id": "subnet-064b56b5f2594621f"
          },
          "dependencies": [
            "aws_route_table.public_subnet_rt",
            "aws_subnet.subnet_az2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:security-group/sg-0adbc90a3e052b028",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adbc90a3e052b028",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-sg",
            "name_prefix": "",
            "owner_id": "452220760922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            },
            "timeouts": null,
            "vpc_id": "vpc-026b991fefa0eb421"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:subnet/subnet-03210ae0439c763b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03210ae0439c763b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452220760922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-026b991fefa0eb421"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:subnet/subnet-064b56b5f2594621f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064b56b5f2594621f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "452220760922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-026b991fefa0eb421"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:452220760922:vpc/vpc-026b991fefa0eb421",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f11de688bbc6b654",
            "default_route_table_id": "rtb-02b7bcf93d1222184",
            "default_security_group_id": "sg-0aca1f5fa0d9d9fc9",
            "dhcp_options_id": "dopt-0efde61aedc62faef",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026b991fefa0eb421",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b7bcf93d1222184",
            "owner_id": "452220760922",
            "tags": {
              "Name": "\u003creplace\u003e"
            },
            "tags_all": {
              "Name": "\u003creplace\u003e"
            }
          }
        }
      ]
    }
  ]
}